--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,9 @@
         <activity
             android:name=".activities.SignInActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.Cobalt">
+            android:theme="@style/AppTheme.Cobalt"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -52,31 +54,41 @@
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Cobalt"
-            android:windowSoftInputMode="adjustNothing">
+            android:windowSoftInputMode="adjustNothing"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
         </activity>
 
         <activity
             android:name=".activities.PlayerActivty"
             android:label="@string/title_activity_player_activty"
-            android:theme="@style/AppTheme.Cobalt">
+            android:theme="@style/AppTheme.Cobalt"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
         </activity>
 
         <activity
             android:name=".activities.MatchActivity"
             android:label="@string/title_activity_match"
-            android:theme="@style/AppTheme.Cobalt">
+            android:theme="@style/AppTheme.Cobalt"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
         </activity>
 
         <activity
             android:name=".activities.SeriesActivity"
             android:label="@string/series"
-            android:theme="@style/AppTheme.Cobalt">
+            android:theme="@style/AppTheme.Cobalt"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
         </activity>
 
         <activity
             android:name=".activities.MatchUpdateActivity"
             android:label="@string/title_activity_match_update"
-            android:theme="@style/AppTheme.Cobalt">
+            android:theme="@style/AppTheme.Cobalt"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
         </activity>
 
         <activity
@@ -84,19 +96,23 @@
             android:label="@string/new_match"
             android:theme="@style/AppTheme.Cobalt"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden">>
+            android:configChanges="orientation|keyboardHidden">
         </activity>
 
         <activity
             android:name=".activities.CreateSeriesActivity"
             android:label="@string/title_activity_create_series_activity"
-            android:theme="@style/AppTheme.Cobalt">
+            android:theme="@style/AppTheme.Cobalt"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
         </activity>
 
         <activity
             android:name=".activities.PickTeamActivity"
             android:label="@string/activity_pick_team"
-            android:theme="@style/AppTheme.Cobalt">
+            android:theme="@style/AppTheme.Cobalt"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="com.example.kevin.fifastatistics.activities.PickTeamActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -106,7 +122,9 @@
         <activity
             android:name=".activities.SettingsActivity"
             android:label="@string/settings"
-            android:theme="@style/AppTheme.Settings">
+            android:theme="@style/AppTheme.Settings"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
         </activity>
 
         <activity
